@@ -16,6 +16,7 @@ AutoPrereqs.skips[1] = ^(Some::|My)Role$
 AutoPrereqs.skips[2] = ^Sub::Name$
 AutoPrereqs.skips[3] = ^Bar$
 AutoPrereqs.skips[4] = ^Mouse
+AutoPrereqs.skips[5] = ^OldMoose$
 
 [Prereqs / DevelopRequires]
 Class::MOP = 0
